# me597

./: .gitignore  README.md
lab1_ws/install/task_2/share/task_2/: package.sh  package.xml
lab2_ws/: pid_0.5_0.1_0.5_log_20250918_212231.csv  pid_1.0_0.001_0.001_log_20250918_211443.csv  pid_1.0_0.001_0.01_log_20250918_211551.csv  pid_1.0_0.001_0.1_log_20250918_211652.csv  pid_1.0_0.001_0.5_log_20250918_211805.csv  pid_1.0_0.001_1.0_log_20250918_211920.csv  pid_1.0_0.001_2.0_log_20250918_212120.csv  pid_1.2_0.01_3.5_log_20250918_212837.csv  pid_1.2_0.2_0.05_log_20250918_221255.csv  pid_1.5_0.01_0.5_log_20250918_212442.csv  pid_1.5_0.01_1.5_log_20250918_212538.csv  pid_1.5_0.01_2.5_log_20250918_212630.csv  pid_1.5_0.01_3.5_log_20250918_212735.csv  pid_1.5_0.1_0.5_log_20250918_212340.csv  pid_10.2_0.001_0.01_log_20250918_215643.csv  pid_10.2_0.001_0.1_log_20250918_215525.csv  pid_10.2_0.005_0.1_log_20250918_215321.csv  pid_10.2_0.05_0.1_log_20250918_215421.csv  pid_12.4_0.0004_4e-05_log_20250918_231514.csv  pid_12.4_0.0004_4e-05_log_20250918_232006.csv  pid_12.4_0.001_0.0001_log_20250918_220217.csv  pid_12.4_0.005_0.0005_log_20250918_220351.csv  pid_12.4_0.01_0.0005_log_20250918_220512.csv  pid_12.4_0.01_0.0005_log_20250918_220920.csv  pid_12.4_0.01_0.0005_log_20250918_221013.csv  pid_12.4_0.01_0.0005_log_20250918_223105.csv  pid_12.4_0.04_0.0005_log_20250918_230826.csv  pid_12.4_0.04_0.004_log_20250918_231030.csv  pid_12.4_0.04_0.04_log_20250918_231325.csv  pid_12.4_0.1_0.0005_log_20250918_220622.csv  pid_15.4_0.01_0.0005_log_20250918_225640.csv  pid_15.4_0.01_0.0005_log_20250918_230003.csv  pid_15.4_0.01_0.005_log_20250918_225842.csv  pid_15.4_0.02_0.0005_log_20250918_230207.csv  pid_15.4_0.02_0.0005_log_20250918_230408.csv  pid_2.0_0.001_0.001_log_20250918_211252.csv  (+32 more)
lab2_ws/src/task_3/: package.xml
lab2_ws/src/task_3/launch/: pid_control_launch.py
lab2_ws/src/task_3/task_3/: pid_controller.py
(+197 files in other folders)
