<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_3</name>
  <version>1.0.0</version>
  <description>Lab 2: Task 3: Turtlebot4</description>
  <maintainer email="srajule@purdue.edu">srajule</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>csv</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>statistics</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
